--- a/style.css
+++ b/style.css
@@ -47,3 +47,7 @@ a {
     text-decoration: none;
     vertical-align: bottom;
   }
+
+img {
+    border-radius: 8px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
