--- a/style.css
+++ b/style.css
@@ -24,6 +24,19 @@ h1 {
     color: rgb(0, 0, 0);
     font-size: 48pt;
     font-family: 'Optima', sans-serif;
+    text-decoration: underline
+    text-align: center
+}
+
+h2 {
+    grid-row-start: 1;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    color: rgb(0, 0, 0);
+    font-size: 30pt;
+    font-family: 'Optima', sans-serif;
+    text-decoration: underline
+    text-align: left
 }
 
 ul {
@@ -44,7 +57,6 @@ a {
     display: inline-block;
     overflow: hidden;
     position: relative;
-    text-decoration: none;
     vertical-align: bottom;
   }
 
