--- a/style.css
+++ b/style.css
@@ -18,9 +18,8 @@ body:after {
 }
 
 h1 {
-    grid-row-start: 1;
-    grid-column-start: 1;
-    grid-column-end: 3;
+    padding: 10px;
+    border-bottom-style: solid
     color: rgb(0, 0, 0);
     font-size: 48pt;
     font-family: 'Optima', sans-serif;
