--- a/style.css
+++ b/style.css
@@ -67,3 +67,10 @@ a {
 img {
     border-radius: 8px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+    
