--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ h2 {
 p {
     font-size: 12pt;
     font-famiy: 'Helvetica', sans-serif;
+}
     
 .button1 {
     background-color: #892962;
@@ -110,11 +111,12 @@ a {
   }
 
 img {
-    height: 100px
-    width: 100px
-    border: solid 1px black
+    height: 100px;
+    width: 100px;
+    border: solid 1px; 
     border-radius: 50px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    }
     
 ul {
   list-style-type: none;
