--- a/style.css
+++ b/style.css
@@ -15,18 +15,18 @@ body:after {
 }
 
 h1 {
-    padding: 5px;
-    border-bottom-style: solid 1px #892962;
-    font-size: 48pt;
+    padding: 10px;
+    border-bottom: 6px solid #892962;
+    font-size: 40pt;
     font-family: 'Garamond', sans-serif;
-    text-align: center;
+    text-align: left;
 }
 
 h2 {
     color: rgb(137, 41, 98);
     font-size: 24pt;
     font-family: 'Garamond', sans-serif;
-    text-align: center;
+    text-align: left;
 }
 
 p {
