--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ h1 {
     border-bottom: 6px solid #892962;
     font-size: 40pt;
     font-family: 'Garamond', sans-serif;
+    width: 500;
     text-align: left;
 }
 
