--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ h1 {
     padding: 10px;
     border-bottom: 6px solid #892962;
     font-size: 40pt;
-    font-family: 'Garamond', sans-serif;
+    font-family: 'Helvetica', sans-serif;
     width: 500;
     text-align: left;
 }
@@ -26,7 +26,8 @@ h1 {
 h2 {
     color: rgb(137, 41, 98);
     font-size: 24pt;
-    font-family: 'Garamond', sans-serif;
+    font-family: 'Monaco', monospace;
+    font-style: italic;
     text-align: left;
 }
 
@@ -58,7 +59,7 @@ button.1:hover {
   color: white;
 }
     
-div.1 {
+div.columns {
     column-count:3;
     column-gap:40;
     column-rule: 1px solid;
