--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ img {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
     
-button.1 {
+button.purple {
     background-color: #892962;
     border: bold 1px black;
     color: white;
@@ -60,7 +60,7 @@ button.1 {
     transition-duration: 0.3s;
     }
     
-button.1:hover {
+button.purple:hover {
   background-color: #e362af; 
   color: white;
 }
