--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ h1 {
     padding: 10px;
     border-bottom: 6px solid #892962;
     font-size: 40pt;
-    font-family: 'Monaco', monospace;
+    font-family: 'Georgia', serif;
     width: 500;
     text-align: left;
 }
