--- a/style.css
+++ b/style.css
@@ -43,7 +43,10 @@ p {
 }
 
 img {
-    height: 300px;
+      display: block;
+  margin-left: auto;
+  margin-right: auto;
+  height: 300px;
     width: 300px;
     border-radius: 150px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
