--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ h1 {
     border-bottom: 6px solid #892962;
     font-size: 40pt;
     font-family: 'Georgia', serif;
-    width: 500;
+    width: 500px;
     text-align: left;
 }
 
