--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 div.purpleheader {
-  background-color: ##c9a7bc;
+  background: ##c9a7bc;
   padding: 20px;
-  border: 5px solid;
+  border: 3px solid;
 }
 
 body {
@@ -12,7 +12,7 @@ body {
 }
 
 h1 {
-    padding: 10px;
+    padding: 5px;
     border-bottom: 6px solid #892962;
     font-size: 40pt;
     font-family: 'Georgia', serif;
@@ -31,6 +31,7 @@ h2 {
 p {
     font-size: 14pt;
     font-famiy: 'Helvetica', sans-serif;
+  align: center;
 }
 
 img {
