--- a/style.css
+++ b/style.css
@@ -45,6 +45,9 @@ img {
     }
     
 button.purple {
+        display: block;
+  margin-left: auto;
+  margin-right: auto;
     background-color: #892962;
     border: bold 1px #000000;
     color: #ffffff;
