--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ div.purpleheader {
   background: ##c9a7bc;
   padding: 20px;
   border: 3px solid;
+  width: 500px
 }
 
 body {
@@ -31,7 +32,7 @@ h2 {
 p {
     font-size: 14pt;
     font-famiy: 'Helvetica', sans-serif;
-  padding: 10px;
+  padding: 30px;
   align: center;
 }
 
