--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 div.purpleheader {
-  background: ##c9a7bc;
+  background: #c9a7bc;
   padding: 5px;
   border: 3px solid;
-  width: 500px
 }
 
 body {
