--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 div.purpleheader {
-  background: #c9a7bc;
-  padding: 5px;
-  border: 3px solid;
+  background: #f2e1eb;
+  padding: 2px;
+  border: 2px solid;
 }
 
 body {
