--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@ body {
 }
 
 h1 {
-    padding: 5px;
+    color: #ffffff;
+  padding: 5px;
     border-bottom: 6px solid #892962;
     font-size: 40pt;
     font-family: 'Georgia', serif;
