--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 div.purpleheader {
-  background: #f2e1eb;
+  background: #c9a7bc;
+  width: 80%;
   padding: 2px;
   border: 2px solid;
 }
@@ -18,7 +19,7 @@ h1 {
     font-size: 40pt;
     font-family: 'Georgia', serif;
     width: 500px;
-    text-align: left;
+    text-align: center;
 }
 
 h2 {
@@ -26,7 +27,7 @@ h2 {
     font-size: 24pt;
     font-family: 'Helvetica', sans-serif;
     font-style: italic;
-    text-align: left;
+    text-align: center;
 }
 
 p {
@@ -96,6 +97,6 @@ body:after {
     left: 0;
     bottom: 0;
     width: 100%;
-    padding: 10px;
+    padding: 30px;
     font-size: 10pt;
 }
