--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 div.purpleheader {
   background: #c9a7bc;
-  width: 80%;
+  width: 100%;
   padding: 2px;
   border: 2px solid;
   align: center;
@@ -20,7 +20,7 @@ h1 {
     font-size: 40pt;
     font-family: 'Georgia', serif;
     width: 400px;
-    align: center;
+    text-align: center;
 }
 
 h2 {
