--- a/style.css
+++ b/style.css
@@ -38,6 +38,11 @@ p {
   align: center;
 }
 
+blockquote {
+  font-family: "Times New Roman", Times, serif;
+  font-size: 20px;
+}
+
 img {
       display: block;
   margin-left: auto;
