--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ p {
 
 p.latin {
   font-family: "Times New Roman", Times, serif;
-  font-size: 40x;
+  font-size: 40pt;
   font-style: italic;
 }
 
