--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ p.latin {
   font-family: "Times New Roman", Times, serif;
   font-size: 35pt;
   font-style: italic;
-  color: #892962;
+  color: #cccccc;
 }
 
 li {
