--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ div.columns {
     column-gap:100;
     column-rule: 1px solid;
     column-width: 200px;
-  padding:30px;
+  padding:60px 30px 30px 30px;
     }
     
 div.footer {
