--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@ div.purpleheader {
   background: #c9a7bc;
   width: 100%;
   padding: 2px;
-  align: center;
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 body {
@@ -15,11 +16,11 @@ body {
 h1 {
     color: #ffffff;
   padding: 2px;
-    text-align: center;
     border-bottom: 6px solid #892962;
     font-size: 40pt;
     font-family: 'Georgia', serif;
     width: 400px;
+      text-align: center;
 }
 
 h2 {
@@ -41,6 +42,7 @@ p {
 p.caption {
   text-align: center;
   font-style: italic;
+  font-size: 12pt;
 }
 
 p.latin {
@@ -54,6 +56,7 @@ li {
   font-size: 12pt;
   font-famiy: 'Helvetica', sans-serif;
   font-style: italic;
+  text-align: center;
   margin: 0;
   padding: 0;
 }
