--- a/style.css
+++ b/style.css
@@ -65,9 +65,9 @@ img {
       display: block;
   margin-left: auto;
   margin-right: auto;
-  height: 300px;
-    width: 300px;
-    border-radius: 150px;
+  height: 240px;
+    width: 240px;
+    border-radius: 120px 120px 0 120px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
     
