--- a/style.css
+++ b/style.css
@@ -66,10 +66,11 @@ img.profile {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 5px;
-  height: 500px;
-    width: 500px;
-    border-radius: 250px 250px 5px 250px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  height: 400px;
+    width: 400px;
+    border-radius: 200px 200px 0 200px;
+  border: solid #000000;
+    padding: 5px;
     }
     
 button.purple {
@@ -85,6 +86,7 @@ button.purple {
     border-radius: 8px;
     transition-duration: 0.3s;
   align: center;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
     
 button.purple:hover {
