--- a/style.css
+++ b/style.css
@@ -17,9 +17,10 @@ h1 {
     color: #ffffff;
   padding: 2px;
     border-bottom: 6px solid #892962;
+  margin: 0;
     font-size: 40pt;
     font-family: 'Georgia', serif;
-    width: 400px;
+    width: 30%;
       display: inline-block;
 }
 
