--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ h1 {
     font-size: 40pt;
     font-family: 'Georgia', serif;
     width: 30%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
       display: inline-block;
 }
 
@@ -68,11 +69,11 @@ img.profile {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 5px;
-  height: 400px;
-    width: 400px;
-    border-radius: 200px 200px 0 200px;
+  height: 360px;
+    width: 360px;
+    border-radius: 180px 180px 0 180px;
   border: solid #000000;
-    padding: 5px;
+    padding: 10px #892962;
     }
     
 button.purple {
