--- a/style.css
+++ b/style.css
@@ -68,12 +68,12 @@ img.profile {
       display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 5px;
+  margin-bottom: 2px;
   height: 360px;
     width: 360px;
     border-radius: 180px 180px 0 180px;
-  border: solid #000000;
-    padding: 10px #892962;
+  border: solid #892962;
+    padding: 10px;
     }
     
 button.purple {
