--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ h1 {
     color: #ffffff;
   padding: 2px;
     border-bottom: 6px solid #892962;
-  margin: 0;
+  margin: 10px 0 0 0;
     font-size: 40pt;
     font-family: 'Georgia', serif;
     width: 30%;
@@ -31,6 +31,7 @@ h2 {
     font-family: 'Helvetica', sans-serif;
     font-style: italic;
     text-align: center;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 p {
@@ -62,6 +63,7 @@ li {
   font-famiy: 'Helvetica', sans-serif;
   font-style: italic;
   text-align: center;
+  list-style-position: outside;
   margin: 0;
   padding: 0;
 }
