--- a/style.css
+++ b/style.css
@@ -120,6 +120,7 @@ div.footer {
   background-color: #c9a7bc;
   text-align: center;
   padding: 30px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 body:after {
