--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@ div.purpleheader {
   margin-bottom: 20px;
 }
 
+div.box {
+  background: #cccccc;
+  padding: 10px;
+  {
+
 body {
     background: #ffffff;
     font-family: 'Helvetica', sans-serif;
