--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ img.profile {
     padding: 10px;
     }
     
-button.purple {
+a.button {
         display: block;
   margin-left: auto;
   margin-right: auto;
@@ -94,7 +94,7 @@ button.purple {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
     
-button.purple:hover {
+a.button:hover {
   background-color: #e362af; 
   color: #ffffff;
 }
