--- a/style.css
+++ b/style.css
@@ -51,8 +51,15 @@ p.caption {
 p.latin {
   font-family: "Times New Roman", serif;
   text-align: center;
-  font-size: 30pt;
+  font-size: 35pt;
   font-style: italic;
+  color: #cccccc;
+}
+
+p.latintr {
+    font-family: "Times New Roman", serif;
+  text-align: center;
+  font-size: 27pt;
   color: #cccccc;
 }
 
